# mudroom

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  sheepit.toml
.cargo/: audit.toml
.github/workflows/: test.yml  validate.yml
migrations/: 1_initial_schema.sql  2_interactions.sql  2_players.sql  4_server_state.sql  5_entity_effects.sql  6_entity_config.sql  7_entity_original_location.sql  8_entity_attributes.sql  9_entity_description.sql
muds/basic/: attributes.toml  mud.toml
muds/basic/entities/: innkeeper.md  innkeeper.toml
src/: cli.rs  game.rs  lib.rs  logging.rs  main.rs  network.rs  persistence.rs  session.rs  state.rs  tui.rs
src/game/: README.md  component.rs  config.rs  engagement.rs  entity.rs  entity_ai.rs  game_loop.rs  game_state.rs  mailbox.rs  map.rs  messaging.rs  player.rs  universe.rs
src/game/component/: attribute.rs  attribute_definition.rs  check.rs  description.rs  effect.rs  interaction.rs  location.rs
src/game/config/: attribute_config.rs  dialog_parser.rs  entity_config.rs  game_loop_config.rs  map_config.rs  map_loader.rs  mud_config.rs  persona_parser.rs
src/game/engagement/: conversation.rs  engagement.rs  engagement_type.rs  (+5 more)
src/network/: README.md  client.rs  discovery.rs  event.rs  server.rs
src/persistence/: attribute_repo.rs  database.rs  dungeon_repo.rs  entity_effect_repo.rs  entity_repo.rs  error.rs  interaction_repo.rs  player_repo.rs  room_repo.rs  server_state_repo.rs  world_repo.rs
src/session/: client_session.rs  error.rs  server_session.rs
src/state/: config.rs
src/tui/: app.rs  commands.rs  discovery.rs  event.rs  layout.rs  player_select.rs
(+37 files in other folders)
