[package]
name = "mudroom"
description = "A TUI client and server for multiplayer text adventure games."
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/mudroom"
version = "0.1.1"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
